[package]
name = "job_orch"
version = "0.1.0"
edition = "2021"
description = "Library for orchestrating event-driven jobs."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
either = "1.10.0"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
